--- a/curso-node-3/.vscode/launch.json
+++ b/curso-node-3/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Run Node",
+            "name": "Attach",
+            "processId": "${command:PickProcess}",
             "restart": true
         }
     ]
