--- a/erick_wendel/curso-node-2/01-npm/package.json
+++ b/erick_wendel/curso-node-2/01-npm/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "curso-node-2",
+  "name": "01-npm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.24.0"
-  }
+  "license": "ISC"
 }
