--- a/erick_wendel/curso-node-2/04-lists/for-forin/package.json
+++ b/erick_wendel/curso-node-2/04-lists/for-forin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-node-2",
+  "name": "for-forin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.18.0"
   }
 }
