--- a/erick_wendel/curso-node-2/06-cli/package.json
+++ b/erick_wendel/curso-node-2/06-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-node-2",
+  "name": "06-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^0.24.0"
+  "devDependencies": {
+    "mocha": "^9.1.3"
   }
 }
